# DataBridgeX2

./: .dockerignore  .gitignore  DataBridgeX.py  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
DataBridgeX2/: asgi.py  settings.py  urls.py  wsgi.py
app_cadastro/: views.py
app_login/: urls.py  views.py
app_login/templates/: index.html
app_plataforma/: apps.py  urls.py  views.py
config/: configs.py  extracoes.py
notebooks/: planilhas de observacao.ipynb  teste.ipynb
pgs/: home.py
pgs/configs/: pg_config.py
scripts/extract/: exportar_dados_para_parquet.py
scripts/load/: load.py
scripts/transform/: planilhas_observacoes_em.py
sql/queries/: avaliacoes.sql  baia.sql  base_colaboradores.sql  boletim_semestre.sql  complemento_migracao_e_ingresso.sql  complemento_pesquisa_ingresso.sql  complemento_provas_corretor.sql  compras_aprovadores.sql  compras_pedidos.sql  disciplinas_alunos.sql  dispercao_de_alunos.sql  enturmacao_de_provas.sql  escolha_extracurricular.sql  escolhas_eletivas.sql  escolhas_eletivas_faltante.sql  estudos_orientados.sql  etnia_funcionarios.sql  evasao.sql  evasao_em.sql  evolucao_inscricao_acumulado.sql  evolucao_inscricoes.sql  expectativa_de_aprendizagem.sql  fechamento_de_atas.sql  folha_de_pagamento.sql  funil_ingresso.sql  licao_de_casa_global.sql  media_parcial.sql  migracao_e_ingresso.sql  migracao_eletivas.sql  origem_inscricoes.sql  pesquisa_e_procurav1.sql  pesquisa_ingresso.sql  pesquisa_satisfacao_pais.sql  pesquisa_satisfacao_q.sql  pesquisa_satisfacao_q_quant.sql  presenca.sql  (+5 more)
(+4 files in other folders)
